--- a/app/views/produtos/index.html
+++ b/app/views/produtos/index.html
@@ -1,5 +1,25 @@
 <html> 
 <body> 
+<table>     
+ <thead> 
+        <tr> 
+            <th>Nome</th> 
+            <th>Descrição</th> 
+            <th>Preço</th> 
+            <th>Quantidade</th>             
+        </tr> 
+    </thead> 
+    <tbody> 
+        <% @produtos_por_nome.each do |produto| %> 
+        <tr> 
+            <td><%= produto.nome %></%></td> 
+            <td><%= produto.descricao %></%></td> 
+            <td><%= produto.preco %></%></td> 
+            <td><%= produto.quantidade %></%></td> 
+        </tr> 
+        <% end %> 
+    </tbody> 
+</table> 
 <table> 
     <thead> 
         <tr> 
@@ -9,17 +29,15 @@
             <th>Quantidade</th>             
         </tr> 
     </thead> 
-    <tbody>   
- <% todos = Produto.all %> 
-  <% todos.each do |produto| %> 
+    <tbody> 
+        <% @produtos_por_preco.each do |produto| %> 
         <tr> 
-            <td><%= produto.nome %></td> 
-            <td><%= produto.descricao %></td> 
-            <td><%= produto.preco %></td> 
-            <td><%= produto.quantidade %></td> 
+            <td><%= produto.nome %></%></td> 
+            <td><%= produto.descricao %></%></td> 
+            <td><%= produto.preco %></%></td> 
+            <td><%= produto.quantidade %></%></td> 
         </tr> 
         <% end %> 
- 
     </tbody> 
 </table> 
 </body> 
